# simple_het_construction

./: .gitignore  README.md  analyse_cages.py  analyse_csd_survey.py  analyse_exchange_reactions.py  analyse_ligands.py  build_cages.py  build_ligands.py  definitions.py  env_set.py  environment.yml  extract_m30l60.py  inflation.py  justfile  matching_functions.py  mypi.ini  notes.md  optimisation.py  orca_usage.py  plot_conformer_numbers.py  plotting.py  pyproject.toml  pywindow_module.py  run_ligand_analysis.py  run_pdn_distance_test.py  study_1_ligand_analysis.py  study_2_build_ligands.py  study_2_case_study_1.py  study_2_ligand_analysis.py  topologies.py  utilities.py  visualise_matching_function.py
src/shc/: __init__.py  analyse_cages.py  analyse_csd_survey.py  build_cages.py  build_ligands.py  cage_utilities.py  definitions.py  env_set.py  extract_m30l60.py  geometry.py  matching_functions.py  optimisation.py  plot_conformer_numbers.py  plotting.py  pywindow_module.py  run_pdn_distance_test.py  study_1.py  study_1_analyse_space.py  study_1_cage_plotting.py  study_1_ligand_analysis.py  study_1_plotting.py  study_1_utilities.py  study_2.py  study_2_analyse_ligands.py  study_2_build_ligands.py  study_2_case_study_1.py  study_2_case_study_1_xtb.py  study_2_hyperparameter.py  study_2_initial_ranking.py  study_2_ligand_analysis.py  study_2_utilities.py  topologies.py  utilities.py  visualise_matching_function.py  visualise_scoring_function.py
src/shc/_internal/: matching_functions.py
src/shc/scripts/: __init__.py  visualise_matching_function.py
tests/reproductions/: case_data.py  conftest.py  test_study1_reproduction.py  test_study2_reproduction.py
tests/reproductions/position_matrices/: l1_c10_cuff.npy  l1_c22_cuff.npy  lb_c22_cuff.npy  lc_c89_cuff.npy  ld_c0_cuff.npy  ld_c10_cuff.npy  ld_c22_cuff.npy  ld_c34_cuff.npy  ld_c89_cuff.npy
tests/reproductions/saved_output/: confs_l1.db  confs_l2.db  (+12 more)
tests/study_1_reproduce/: case_data.py  conftest.py  test_reproduction.py
(+499 files in other folders)
